# modulo-consultas-parlamentarias

./: .env.example  .gitignore  Makefile  README.md  compose.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  requirements.txt
cparla/: alembic.ini  chat_app.py
cparla/db/: __init__.py  cli.py  engine.py
cparla/db/alembic/: env.py
cparla/db/alembic/versions/: a3160bcf44b6_initial_parliamentary_tables.py
cparla/db/models/: asuntos.py  bloques.py  legisladores.py
cparla/retriever/: __init__.py  retriever.py
cparla/server/: helper.py  server.py
docker/core/: Dockerfile
docker/mcp/: Dockerfile
modulo_consultas_parlamentarias/: alembic.ini  chat_app.py  version.py
modulo_consultas_parlamentarias/db/: __init__.py  cli.py  services.py
modulo_consultas_parlamentarias/db/alembic/: env.py
modulo_consultas_parlamentarias/db/alembic/versions/: 0001_initial_parliamentary_tables.py
modulo_consultas_parlamentarias/db/models/: __init__.py  asuntos.py  bloques.py  legisladores.py  votaciones.py
modulo_consultas_parlamentarias/logger/: logger.py
modulo_consultas_parlamentarias/retriever/: retriever.py
modulo_consultas_parlamentarias/server/: helper.py  server.py
notebooks/01-eda/: 01-diputados.ipynb
notebooks/02-qdrant-collections/: 01-create-diputados-collections.ipynb
notebooks/03-agents-development/: 01-sql-queries-agent.ipynb
scripts/: __init__.py  chat_cli.py  create_collections.py  db_manager.py  download_tables.py  populate_db.py
